# extraction-gym

./: .gitignore  Cargo.toml  Makefile  README.md  convert.py  plot.py  plots.py
data/babble/: list_list_hard_test_ellisk_2019-02-15T11.26.41--bench000_it0.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench000_it0.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench001_it1.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench001_it1.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench002_it2.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench002_it2.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench003_it4.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench003_it4.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench004_it5.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench004_it5.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench005_it7.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench005_it7.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench006_it8.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench006_it8.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench007_it10.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench007_it10.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench008_it11.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench008_it11.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench009_it12.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench009_it12.json.csv  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench010_it15.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench010_it15.json.csv  list_list_hard_test_ellisk_2019-02-15T11.31.39--bench000_it0.json  list_list_hard_test_ellisk_2019-02-15T11.31.39--bench000_it0.json.csv  list_list_hard_test_ellisk_2019-02-15T11.31.39--bench001_it1.json  list_list_hard_test_ellisk_2019-02-15T11.31.39--bench001_it1.json.csv  list_list_hard_test_ellisk_2019-02-15T11.31.39--bench002_it2.json  list_list_hard_test_ellisk_2019-02-15T11.31.39--bench002_it2.json.csv  (+318 more)
fail/: lambda_function_repeat.fail
src/: egraph.rs  main.rs  test.rs  to_egraph_serialized.rs
val-trie/: Cargo.toml
val-trie/benches/: int_map.rs
val-trie/src/: lib.rs  node.rs  test_workloads.rs
val-trie/src/group/: mod.rs
val-trie/src/map/: mod.rs  tests.rs
val-trie/src/set/: mod.rs  tests.rs
(+750 files in other folders)
