[package]
edition = "2021"
name = "extraction-gym"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ilp-cbc = ["coin_cbc"]
ilp-highs = ["good_lp"]

[dependencies]
env_logger = { version = "0.10.0", default-features = false }
indexmap = "2.0.0"
log = "0.4.19"
ordered-float = "3"
pico-args = { version = "0.5.0", features = ["eq-separator"] }

anyhow = "1.0.71"
coin_cbc = { version = "0.1.6", optional = true }
good_lp = { version = "1.7.0", default-features = false, features = ["highs"], optional = true }
im-rc = "15.1.0"
rustc-hash = "1.1.0"

rpds = "1.1.0"
[dependencies.egraph-serialize]
git = "https://github.com/egraphs-good/egraph-serialize"
rev = "951b829a434f4008c7b45ba4ac0da1037d2da90"
