[package]
name = "val-trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
hashbrown = "0.13"

[dev-dependencies]
rand = "0.8.4"
criterion = "0.4"
im = "15.1"

[[bench]]
name = "int_map"
harness = false